<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="@dimen/text_sizes"
        android:id="@+id/tx_forecast_time"
        android:text="@string/forecast_date_time"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_sizes"
        android:id="@+id/tx_forecast_main"
        android:text="@string/forecast_main"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_sizes"
        android:id="@+id/tx_Forecast_temp"
        android:text="@string/forecast_temp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tx_forecast_tempmax"
            android:textSize="@dimen/text_sizes"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tx_forecast_tempmin"
            android:textSize="@dimen/text_sizes"
            />
    </LinearLayout>

</LinearLayout>